--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<p class="copy">
 			&copy; {{ site.time | date: '%Y' }}
-			<a href="gullahermanns.github.io">Gulla Hermannsdottir</a>.
+			<a href="https://gullahermannsdottir.com">Gulla Hermannsdottir</a>.
 		</p>
 
 		<div class="footer-links">
