--- a/_includes/head.html
+++ b/_includes/head.html
@@ -66,7 +66,7 @@
 	{%- endif -%}
 
 	<!-- Favicon -->
-	<link rel="icon" type="image/x-icon" href="{{/assets/img/favicon.ico | relative_url }}"/>
+	<link rel="icon" type="image/x-icon" href="{{ '/assets/img/favicon.ico' | relative_url }}"/>
 
 	<!-- Stylesheet -->
 	<link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" />
